# 3DScanner

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
src/: 3DScannerConfig.h.in  CMakeLists.txt
src/components/frame/: frame.cpp  frame.h  frame_types.h
src/components/model/: model.h
src/components/processing/: pc_registration.h  plane_removal.h
src/utils/frame_viewer/: frame_viewer.cpp  frame_viewer.h
src/utils/register_clouds/: register_clouds.cpp  register_clouds.h
src/utils/registration_demo/: registration_demo.cpp
src/utils/scan_to_model/: scan_to_model.cpp
test/: CMakeLists.txt  test_all.cpp
test/test_frame/: test_frame.cpp
test/test_preprocessing/: test_preprocessing.cpp
test/test_render/: test_render.cpp
